# yandex_dialogs

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml  docker-push.yml
food_app/: __main__.py
food_app/handlers/: config.py  health.py  papa_johns.py
food_app/models/: config.py  delivery_club.py  internal.py  yandex_dialogs.py
food_app/service/: config.py  delivery_club.py  exceptions.py  papa_johns.py
pixoo_app/: __main__.py
pixoo_app/handlers/: health.py  pixoo.py
pixoo_app/service/: pixoo_interact.py  utils.py
super_app/: __main__.py
super_app/handlers/: health.py
tests/: test_food_app.py  test_yandex_dialogs.py
utils/: config.py
