[tool.poetry]
name = "yandex_dialogs"
version = "0.1.0"
description = ""
authors = ["Fisab <vladsudakov5@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
aiohttp = "^3.8.1"
furl = "^2.1.3"
PyYAML = "^6.0"
cachetools = "^5.2.0"
asyncache = "^0.1.1"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
